--- a/Ventas.Presentacion.Web/Views/GestionDeClientes/Index.cshtml
+++ b/Ventas.Presentacion.Web/Views/GestionDeClientes/Index.cshtml
@@ -1,45 +1,52 @@
-﻿<div class="row col-12" id="app">
-    <div class="col-5">                                 
-        <div class="form-group">
-            <label>DNI</label>
-            <input type="text" class="form-control" v-model="DNI" />
+﻿<div class="col-12" id="app">
+    <b-modal id="formularioDeCliente" size="lg" title="Formulario de Cliente" @@ok="registrar" >
+        <div class="col-12 row">
+            <div class="col-6">
+                <div class="form-group">
+                    <label>DNI</label>
+                    <input type="text" class="form-control" v-model="DNI" />
+                </div>
+                <div class="form-group">
+                    <label>Nombre Completo</label>
+                    <input type="text" class="form-control" v-model="NombreCompleto" />
+                </div>
+                <div class="form-group">
+                    <label>Sexo</label>
+                    <select class="form-control" v-model="Sexo">
+                        <option>Masculino</option>
+                        <option>Femenino</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label>Fecha de Nacimiento</label>
+                    <input type="date" class="form-control" v-model="FechaNacimiento" />
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="form-group">
+                    <label>Direccion</label>
+                    <input type="text" class="form-control" v-model="Direccion" />
+                </div>
+                <div class="form-group">
+                    <label>Ubigeo</label>
+                    <input type="text" class="form-control" v-model="UBIGEO" />
+                </div>
+                <div class="form-group">
+                    <label>Correo</label>
+                    <input type="text" class="form-control" v-model="Correo" />
+                </div>
+                <div class="form-group">
+                    <label>Celular</label>
+                    <input type="text" class="form-control" v-model="Celular" />
+                </div>
+            </div>
+
         </div>
-        <div class="form-group">
-            <label>Nombre Completo</label>
-            <input type="text" class="form-control" v-model="NombreCompleto"/>
-        </div>
-        <div class="form-group">
-            <label>Sexo</label>
-            <select class="form-control" v-model="Sexo">
-                <option>Masculino</option>
-                <option>Femenino</option>
-            </select>
-        </div>
-        <div class="form-group">
-            <label>Fecha de Nacimiento</label>
-            <input type="date" class="form-control" v-model="FechaNacimiento"/>
-        </div>
-        <div class="form-group">
-            <label>Direccion</label>
-            <input type="text" class="form-control" v-model="Direccion" />
-        </div>
-        <div class="form-group">
-            <label>Ubigeo</label>
-            <input type="text" class="form-control" v-model="UBIGEO"/>
-        </div>
-        <div class="form-group">
-            <label>Correo</label>
-            <input type="text" class="form-control" v-model="Correo"/>
-        </div>
-        <div class="form-group">
-            <label>Celular</label>
-            <input type="text" class="form-control" v-model="Celular"/>
-        </div>
-        <div class="form-group">
-            <button class="btn btn-primary" v-on:click="registrar">Guardar</button>
-        </div>
+    </b-modal>
+    <div class="row form-group">
+        <button class="btn btn-primary" v-on:click="mostrarModal">Registrar Nuevo</button>
     </div>
-    <div class="col-7">
+    <div class="col-8 row">
         <table class="table table-bordered table-hover">
             <thead class="thead-dark">
                 <tr>
@@ -111,6 +118,9 @@
                     .then(listaClientes => {
                         this.ClientesRegistrados = listaClientes;
                     })
+            },
+            mostrarModal: function () {
+                this.$bvModal.show('formularioDeCliente');
             }
         }
     })
