--- a/Ventas.Presentacion.Web/Views/GestionDeClientes/Index.cshtml
+++ b/Ventas.Presentacion.Web/Views/GestionDeClientes/Index.cshtml
@@ -1,25 +1,25 @@
 ﻿<div class="col-12" id="app">
-    <b-modal id="formularioDeCliente" size="lg" title="Formulario de Cliente" @@ok="registrar" >
+    <b-modal id="formularioDeCliente" size="lg" title="Formulario de Cliente" @@ok="registrar" @@cancel="limpiarFormulario" @@hidden="limpiarFormulario">
         <div class="col-12 row">
             <div class="col-6">
                 <div class="form-group">
                     <label>DNI</label>
-                    <input type="text" class="form-control" v-model="DNI" />
+                    <input type="text" class="form-control" v-model="DNI" v-bind:disabled="esActualizacion()"/>
                 </div>
                 <div class="form-group">
                     <label>Nombre Completo</label>
-                    <input type="text" class="form-control" v-model="NombreCompleto" />
+                    <input type="text" class="form-control" v-model="NombreCompleto" v-bind:disabled="esActualizacion()"/>
                 </div>
                 <div class="form-group">
                     <label>Sexo</label>
-                    <select class="form-control" v-model="Sexo">
+                    <select class="form-control" v-model="Sexo" v-bind:disabled="esActualizacion()">
                         <option>Masculino</option>
                         <option>Femenino</option>
                     </select>
                 </div>
                 <div class="form-group">
                     <label>Fecha de Nacimiento</label>
-                    <input type="date" class="form-control" v-model="FechaNacimiento" />
+                    <input type="date" class="form-control" v-model="FechaNacimiento" v-bind:disabled="esActualizacion()"/>
                 </div>
             </div>
             <div class="col-6">
@@ -56,7 +56,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr v-for="cliente in ClientesRegistrados">
+                <tr v-for="cliente in ClientesRegistrados" v-on:click="mostrarCliente(cliente.Id)">
                     <td>{{cliente.NombreCompleto}}</td>
                     <td>{{cliente.DNI}}</td>
                     <td>{{cliente.Celular}}</td>
@@ -70,6 +70,7 @@
     var app = new Vue({
         el: '#app',
         data: {
+            Id: null,
             NombreCompleto: '',
             DNI: '',
             Direccion: '',
@@ -90,6 +91,7 @@
                 this.Celular = '';
                 this.FechaNacimiento = '';
                 this.Sexo = '';
+                this.Id = null;
             },
             sacaObjetoDelFormulario: function () {
                 return {
@@ -105,12 +107,25 @@
             },
             registrar: function () {
                 let data = app.sacaObjetoDelFormulario();
-                axios.post('/api/Clientes/Registrar', data)
-                    .then(resultado => resultado.data)
-                    .then(nuevoCliente => {
-                        this.ClientesRegistrados.push(nuevoCliente);
-                        this.limpiarFormulario();
-                    })
+                if (this.esActualizacion) {
+                    data.Id = this.Id;
+                    axios.put('/api/Clientes/Actualizar', data)
+                        .then(resultado => resultado.data)
+                        .then(clienteActualizado => {
+                            let cliente = this.ClientesRegistrados.find(x => x.Id == clienteActualizado.Id);
+                            cliente.Celular = clienteActualizado.Celular;
+                            this.limpiarFormulario();
+                        })
+                }
+                else {
+                    axios.post('/api/Clientes/Registrar', data)
+                        .then(resultado => resultado.data)
+                        .then(nuevoCliente => {
+                            this.ClientesRegistrados.push(nuevoCliente);
+                            this.limpiarFormulario();
+                        })
+                }
+
             },
             cargarClientesDelServidor() {
                 axios.get('/api/Clientes/ListarTodos')
@@ -121,6 +136,25 @@
             },
             mostrarModal: function () {
                 this.$bvModal.show('formularioDeCliente');
+            },
+            mostrarCliente(id) {
+                axios.get('/api/Clientes/Buscar/'+id)
+                    .then(resultado => resultado.data)
+                    .then(datosDelCliente => {
+                        this.NombreCompleto = datosDelCliente.NombreCompleto;
+                        this.DNI = datosDelCliente.DNI;
+                        this.Direccion = datosDelCliente.Direccion;
+                        this.UBIGEO = datosDelCliente.UBIGEO;
+                        this.Correo = datosDelCliente.Correo;
+                        this.Celular = datosDelCliente.Celular;
+                        this.FechaNacimiento = datosDelCliente.FechaNacimiento;
+                        this.Sexo = datosDelCliente.Sexo;
+                        this.Id = datosDelCliente.Id;
+                        this.mostrarModal();
+                    })
+            },
+            esActualizacion: function () {
+                return this.Id !== null;
             }
         }
     })
