--- a/Ventas.Presentacion.Web/Views/Shared/_Layout.cshtml
+++ b/Ventas.Presentacion.Web/Views/Shared/_Layout.cshtml
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/js")
+    <script src="https://unpkg.com/vue-multiselect@2.1.0"></script>
+    <link rel="stylesheet" href="https://unpkg.com/vue-multiselect@2.1.0/dist/vue-multiselect.min.css">
 </head>
     <body>
         <div class="container body-content">
