--- a/Ventas.Presentacion.Web/Views/GestionDeVentas/Index.cshtml
+++ b/Ventas.Presentacion.Web/Views/GestionDeVentas/Index.cshtml
@@ -21,44 +21,66 @@
                     <h3>Total : {{total}}</h3>
                 </div>
             </div>
-           <div class="col-12 row">
-               <button class="btn btn-primary" v-on:click="agregarProducto">Agregar Producto</button>
-               <table class="table table-hover">
-                   <thead>
-                       <tr>
-                           <th>Categoria</th>
-                           <th>Producto</th>
-                           <th>Precio</th>
-                           <th>Cantidad</th>
-                           <th>total</th>
-                           <th>Acciones</th>
-                       </tr>
-                   </thead>
-                   <tbody>
-                       <tr v-for="detalle in listaDeDetalles">
-                           <td>
-                               <multiselect v-model="detalle.categoria" :options="listaDeCategorias" label="Nombre" @@input="refrescarProductosEnElDetalle(detalle)"></multiselect>
-                           </td>
-                           <td>
-                               <multiselect v-model="detalle.productoSelecionado" :options="detalle.listaDeProductos" label="Nombre" @@input="refrescarPrecioEnElDetalle(detalle)"></multiselect>
-                           </td>
-                           <td>{{detalle.precio}}</td>
-                           <td>
-                               <input type="number" v-model="detalle.cantidad" v-on:change="recalcularTotal(detalle)"/>
-                           </td>
-                           <td>{{detalle.total}}</td>
-                           <td>
-                               <button class="btn btn-danger" v-on:click="eliminarDetalle(detalle)">Eliminar</button>
-                           </td>
-                       </tr>
-                   </tbody>
-               </table>
-           </div>
+            <div class="col-12 row">
+                <button class="btn btn-primary" v-on:click="agregarProducto">Agregar Producto</button>
+                <table class="table table-hover">
+                    <thead>
+                        <tr>
+                            <th>Categoria</th>
+                            <th>Producto</th>
+                            <th>Precio</th>
+                            <th>Cantidad</th>
+                            <th>total</th>
+                            <th>Acciones</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr v-for="detalle in listaDeDetalles">
+                            <td>
+                                <multiselect v-model="detalle.categoria" :options="listaDeCategorias" label="Nombre" @@input="refrescarProductosEnElDetalle(detalle)"></multiselect>
+                            </td>
+                            <td>
+                                <multiselect v-model="detalle.productoSelecionado" :options="detalle.listaDeProductos" label="Nombre" @@input="refrescarPrecioEnElDetalle(detalle)"></multiselect>
+                            </td>
+                            <td>{{detalle.precio}}</td>
+                            <td>
+                                <input type="number" v-model="detalle.cantidad" v-on:change="recalcularTotal(detalle)" />
+                            </td>
+                            <td>{{detalle.total}}</td>
+                            <td>
+                                <button class="btn btn-danger" v-on:click="eliminarDetalle(detalle)">Eliminar</button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </b-modal>
     <button v-on:click="abrirFormulario" class="btn btn-primary">Registrar Venta</button>
+    <a class="btn btn-primary" href="/GestionDeVentas/reporteDeVentasEnExcel">Descargar Reporte</a>
+    <div class="col-12 row">
+        <table class="table table-bordered table-hover">
+            <thead class="thead-dark">
+                <tr>
+                    <th>Id</th>
+                    <th>Cliente</th>
+                    <th>Vendedor</th>
+                    <th>Fecha</th>
+                    <th>Total</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr v-for="venta in ventasRegistradas">
+                    <td>{{venta.Id}}</td>
+                    <td>{{venta.NombreCliente}}</td>
+                    <td>{{venta.NombreDelVendedor}}</td>
+                    <td>{{venta.Fecha}}</td>
+                    <td>{{venta.MontoTotal}}</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
-
 <script src="~/Scripts/Servicios/Servicios.js"></script>
 <script>
     Vue.component('multiselect', VueMultiselect.Multiselect);
@@ -74,9 +96,9 @@
             listaDeCategorias: [],
             listaDeDetalles: [],
             total: 0,
-            listaDeTiposDeVenta: ["Boleta","Factura"],
+            listaDeTiposDeVenta: ["Boleta", "Factura"],
             tipoDeVenta: null,
-            ventasRegistradas:[]
+            ventasRegistradas: []
         },
         methods: {
             registrarVenta: function () {
@@ -85,7 +107,7 @@
                     IdCliente: this.cliente.Id,
                     Total: this.total,
                     TipoDeVenta: this.tipoDeVenta,
-                    Detalles: this.listaDeDetalles.map(x => {                        
+                    Detalles: this.listaDeDetalles.map(x => {
                         return {
                             IdProducto: x.productoSelecionado.Id,
                             Cantidad: x.cantidad,
@@ -93,6 +115,7 @@
                         };
                     })
                 }).then(ventaRegistrada => {
+                    ventaRegistrada.Fecha = new Date(ventaRegistrada.Fecha).toLocaleString();
                     this.ventasRegistradas.push(ventaRegistrada);
                     this.limpiarFormulario();
                 })
@@ -111,6 +134,11 @@
                 Servicios.ConsultarClientes().then(x => this.listaDeClientes = x);
                 Servicios.ConsultarVendedores().then(x => this.listaDeVendedores = x);
                 Servicios.ConsultarCategorias().then(x => this.listaDeCategorias = x);
+                Servicios.ConsultarTodasLasVentas().then(x => this.ventasRegistradas = x.map(venta => {
+                    venta.Fecha = new Date(venta.Fecha);
+                    venta.Fecha = venta.Fecha.toLocaleString();
+                    return venta;
+                }));
             },
             agregarProducto: function () {
                 this.listaDeDetalles.push({
